fixed table on mobile

--- a/styles.css
+++ b/styles.css
@@ -196,12 +196,9 @@ h1{
 }
 
 .storytable{
-  width: inherit;
+  max-width: 80vw;
   height: calc(100vh - 200px);
   overflow-y: scroll;
-}
-
-.storytable{
   font-size: 0.9rem;
 
 }
@@ -216,6 +213,7 @@ h1{
     border: none;
     padding: 5px 10px;
     margin-right: 5px;
+    margin-top: 3px;
     font-size: 0.9rem;
     cursor: pointer;
     border-radius: 5px;
@@ -229,6 +227,7 @@ h1{
 table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 tr{
@@ -249,6 +248,43 @@ th, td {
 th {
     background-color: var(--main-bkg);
 }
+
+
+th:nth-child(1),
+td:nth-child(1) {
+  width: 60%; /* Set the first column to 40% of the table width */
+}
+
+th:nth-child(2),
+td:nth-child(2) {
+  width: 25%; /* Set the second column to 30% of the table width */
+}
+
+th:nth-child(3),
+td:nth-child(3) {
+  width: 15%; /* Set the third column to 30% of the table width */
+}
+
+
+
+@media screen and (max-width: 768px) {
+  th:nth-child(1),
+td:nth-child(1) {
+width: 100%
+}
+
+th:nth-child(2),
+td:nth-child(2) {
+  display: none; /* Set the second column to 30% of the table width */
+}
+
+th:nth-child(3),
+td:nth-child(3) {
+display: none; /* Set the third column to 30% of the table width */
+}
+
+}
+
 
 
 /* TABLE CATEGORIES */
